--- a/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
+++ b/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
@@ -1,4 +1,67 @@
-.action-column {
-    width: 175px;
-    white-space: nowrap;
+.author-item {
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border: 1px solid #ddd;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.author-item:hover {
+    background-color: #f8f9fa; /* світло-сірий колір при наведенні */
+}
+
+.author-name {
+    font-weight: bold;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.mx-1 {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
+
+.pagination-custom {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+}
+
+.pagination-custom .page-item {
+    margin: 0 5px;
+}
+
+.pagination-custom .page-item.active .page-link {
+    background-color: #dcdcdc;
+    border-color: #dcdcdc;
+    color: #000;
+}
+
+.pagination-custom .page-link {
+    color: #007bff;
+    cursor: pointer;
+}
+
+.pagination-custom .page-link:hover {
+    text-decoration: underline;
+}
+
+.pagination-custom .page-link:focus {
+    box-shadow: none;
 }
