--- a/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
+++ b/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
@@ -5,10 +5,19 @@
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
+    position: relative;
 }
 
 .author-item:hover {
-    background-color: #f8f9fa; /* світло-сірий колір при наведенні */
+    background-color: #f0f8ff;
+}
+
+.author-item .delete-button {
+    display: none;
+}
+
+.author-item:hover .delete-button {
+    display: inline-block;
 }
 
 .author-name {
@@ -36,32 +45,3 @@
     margin-top: 1rem;
 }
 
-.pagination-custom {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-}
-
-.pagination-custom .page-item {
-    margin: 0 5px;
-}
-
-.pagination-custom .page-item.active .page-link {
-    background-color: #dcdcdc;
-    border-color: #dcdcdc;
-    color: #000;
-}
-
-.pagination-custom .page-link {
-    color: #007bff;
-    cursor: pointer;
-}
-
-.pagination-custom .page-link:hover {
-    text-decoration: underline;
-}
-
-.pagination-custom .page-link:focus {
-    box-shadow: none;
-}
