Work with author next step work with books

--- a/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
+++ b/hw_03_modern_frontend_book_management/src/pages/default/dashboard/Dashboard.css
@@ -31,6 +31,12 @@
 .mx-1 {
     margin-left: 5px;
     margin-right: 5px;
+    background: #dc3545;
+}
+.mx-2 {
+    margin-left: 5px;
+    margin-right: 5px;
+    background: yellow;
 }
 
 .d-flex {
